Update to KeyCode Encoding Logic
Update to KeyCode Encoding Logic